FIRST COMMIT: Sistema de Planificación Didáctica IA - I.E. Santander v1.0

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "guaimaral-docente-ai",
+  "name": "santander-docente-ai",
   "private": true,
   "version": "0.0.0",
   "type": "module",
