--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.94.1",
     "docx": "^9.5.1",
     "file-saver": "^2.0.5",
+    "groq-sdk": "^0.37.0",
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
